added a slideDown() to show the result

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div class="square">7</div>
       <div class="square">8</div>
       <div class="square">9</div>
+      <div class="result"><p>The winner is Player one</p></div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
