Done with the logic

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <button id="start">Start</button>
       </div>
       <div class="layer result">
-        <p>The winner is Player one</p>
+        <p id="playerName"></p>
+        <p id="wins"></p>
         <button id="playAgain">Play again</button>
       </div>
     </div>
