added a score bord

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <button id="playAgain">Play again</button>
       </div>
     </div>
-    <!-- <div class="score"></div> -->
+    <div class="score"><h3>SCORES</h3></div>
     <audio id="tic" src="sound/tic.mp3"></audio>
     <audio id="woosh" src="sound/woosh.mp3"></audio>
     <audio id="win2" src="sound/win1.wav"></audio>
