added a new level

--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
       <h3>Computer Level</h3>
       <form id="computerLevel">
         <div><input name="level" type="radio" value="easy" />Easy</div>
-        <div><input name="level" type="radio" value="hard" checked />Hard</div>
+        <div>
+          <input name="level" type="radio" value="hard"  />Hard(Hala can
+          win)
+        </div>
+        <div>
+          <input name="level" type="radio" value="Vhard" checked />Hard(Unbeatable)
+        </div>
       </form>
     </div>
     <div class="score"><h3>SCORES</h3></div>
