added a new hareder level

--- a/index.html
+++ b/index.html
@@ -45,11 +45,18 @@
       <form id="computerLevel">
         <div><input name="level" type="radio" value="easy" />Easy</div>
         <div>
-          <input name="level" type="radio" value="hard"  />Hard(Hala can
-          win)
+          <input name="level" type="radio" value="hard" />Hard(Hala Win)
         </div>
         <div>
-          <input name="level" type="radio" value="Vhard" checked />Hard(Unbeatable)
+          <input name="level" type="radio" value="Vhard" />Hard(Mohammed Win)
+        </div>
+        <div>
+          <input
+            name="level"
+            type="radio"
+            value="VVhard"
+            checked
+          />Hard(Unbeatable)
         </div>
       </form>
     </div>
