added some animation and chanege easy to normal

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h3>Computer Level</h3>
       <form id="computerLevel">
         <div><input name="level" type="radio" value="easy" />Easy</div>
-        <div><input name="level" type="radio" value="medium" />Medium</div>
+        <div><input name="level" type="radio" value="medium" />Normal</div>
         <div>
           <input name="level" type="radio" value="hard" />Hard(Hala Win)
         </div>
